Fixed input box scaling issue on mobile

--- a/pages/FOV-Screen-Calculator/style.css
+++ b/pages/FOV-Screen-Calculator/style.css
@@ -86,6 +86,7 @@ h1 {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    min-width: 0;
 }
 
 .field.small {
@@ -101,6 +102,8 @@ label {
 
 input,
 select {
+    width: 100%;
+    box-sizing: border-box;
     background: rgba(0, 0, 0, 0.3);
     border: 1px solid var(--border);
     color: white;
